--- a/search_result.html
+++ b/search_result.html
@@ -15,8 +15,10 @@ left:400; top:100px;
 .button{
    border-radius: 10px;
    border-color: #a4a8ab;
-   border-width: 2px;
+   border-width: 3px;
    border-style: ridge;
+   width:150px;
+   height:50px;
 }
 </style>
 </head>
@@ -30,12 +32,14 @@ left:400; top:100px;
     <span style = " font-size:1.3em;  color: #76838d; font-weight: bold">개</span><br><br><br><br>
 
     {% for i in range(0, num)  %}
-	<li>
-        <a href={{ href_list[i] }}>{{ i+1 }}. {{ name_list[i]  }} </a> </br></br> 
-	</li>
+        <a href={{ href_list[i] }}>{{ i+1 }}. {{ name_list[i]  }} </a> </br></br>
     {% endfor %}
-    <br><br><button class="button"><span style = " font-size:1.2m;  color: #4b4b52; font-weight: bold href=find word2.html">뒤로 가기</span> </button>
+    <br><br>
+    <center>
+      <button class="button"><span style = " font-size:1.2m;  color: #4b4b52; font-weight: bold href=find word2.html">뒤로 가기</span> </button>
+      </center>
   </div>
 </article>
 </body>
 </html>
+
