--- a/search.html
+++ b/search.html
@@ -76,7 +76,7 @@ left:870px; top:370px;
 
     <div class="search-box">
       <input type="text" class="search-txt" name=""placeholder=" 검색어 입력">
-      <a class="search-btn" href="world_list(1).html">
+      <a class="search-btn" href="search_result.html">
         <i class="fas fa-search"></i>
       </a>
     </div>
