--- a/search_result.html
+++ b/search_result.html
@@ -36,10 +36,11 @@ left:400; top:100px;
     {% endfor %}
     <br><br>
     <center>
-      <button class="button"><span style = " font-size:1.2m;  color: #4b4b52; font-weight: bold href=find word2.html">뒤로 가기</span> </button>
+      <button class="button"><span style = " font-size:1.2m;  color: #4b4b52; font-weight: bold"><a href="search.html">뒤로 가기</a></span> </button>
       </center>
   </div>
 </article>
 </body>
 </html>
+
 
