--- a/survey.html
+++ b/survey.html
@@ -849,7 +849,7 @@ blockquote {
 
 </div>
 <center>
-<input class="button" id="submit" type="submit" value="확인" able/>
+<input class="button" id="submit" type="submit" value="확인" href="survey_result.html">
 </center>
 </form>
     <p id="c3e9b307-09d9-4141-bb8a-2f8a750cd520" class=""></p>
