--- a/survey_result.html
+++ b/survey_result.html
@@ -732,7 +732,7 @@ blockquote {
     6. 무직  {{rlist[55]}}명
 
         <center>
-      <button class="button"><span style = " font-size:1.2m;  color: #4b4b52; font-weight: bold href=survey.html">뒤로 가기</span> </button>
+      <button class="button"><span style = " font-size:1.2m;  color: #4b4b52; font-weight: bold"><a href="survey.html">뒤로 가기</a></span> </button>
       </center>
   </div>
 </article>
